--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>3.4.3</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
